# VisionLabelOps

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PLANS.md  README.md  README.zh-CN.md  SECURITY.md  justfile  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  devlog.md  github_showcase_checklist.md  quickstart.md  quickstart.zh-CN.md  reference_notes.md  release_checklist.md  release_notes_v0.1.0.md  release_notes_v0.1.1.md
examples/: basic_api.py
examples/data/labelme-mini/: sample1.json  sample2.json
src/visionlabelops/: __init__.py  __main__.py  api.py  cli.py  config.py  constants.py  errors.py  types.py
src/visionlabelops/audit/: __init__.py  service.py
src/visionlabelops/convert/: __init__.py  service.py
src/visionlabelops/io/: __init__.py  coco.py  common.py  labelme.py  yolo.py
src/visionlabelops/preview/: __init__.py  service.py
src/visionlabelops/report/: __init__.py  service.py
src/visionlabelops/resources/: report_template.html.j2
src/visionlabelops/split/: __init__.py  service.py
src/visionlabelops/stats/: __init__.py  service.py
src/visionlabelops/utils/: dataset_ops.py  image_ops.py  pathing.py  serialization.py
tests/: conftest.py  test_io_and_types.py  test_packaging_and_examples.py  test_services_and_cli.py
tests/fixtures/coco/: annotations.json
tests/fixtures/labelme/: sample1.json  sample2.json  unsupported.json
tests/fixtures/yolo/: data.yaml
tests/fixtures/yolo/labels/train/: sample1.txt
tests/fixtures/yolo/labels/val/: sample2.txt
